--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>新网渠道合作创新计划</title>
+  <title></title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet" href="https://agent.xinnet.com/login/swiper/css/idangerous.swiper.css">
+  <!-- <link rel="stylesheet" href="https://agent.xinnet.com/login/swiper/css/idangerous.swiper.css"> -->
   <style>
     /* zcReset */
     html,
@@ -528,7 +528,7 @@
   <div class="section section01">
     <div class="links">
       <a href="https://agent.xinnet.com/login/pages/agentLogin.jsp" target="_blank" rel="noopener noreferrer">合作咨询</a>
-      <a href="https://agent.xinnet.com/agentRegister.do?method=register" target="_blank" rel="noopener noreferrer">代理加盟</a>
+      <a href="https://agent.xinnet.com/customer/register.do?method=apply" target="_blank" rel="noopener noreferrer">代理加盟</a>
       <a href="https://agent.xinnet.com/" target="_blank" rel="noopener noreferrer">登录代理平台</a>
     </div>
     <div class="cont">
@@ -585,7 +585,7 @@
                   </tr>
                   <tr>
                     <td class="col1">支持语言</td>
-                    <td class="col2">Html.WAP.ASP.NET.PHP.PERL5.独立 CGI-bin</td>
+                    <td class="col2">Html、WAP、ASP、.NET、PHP、PERL5、独立 CGI-bin</td>
                   </tr>
                   <tr>
                     <td class="col1">机房</td>
@@ -669,7 +669,7 @@
                   </tr>
                   <tr>
                     <td class="col1">支持语言</td>
-                    <td class="col2">Html.WAP.ASP.NET.PHP.PERL5.独立 CGI-bin</td>
+                    <td class="col2">Html、WAP、ASP、.NET、PHP、PERL5、独立 CGI-bin</td>
                   </tr>
                   <tr>
                     <td class="col1">机房</td>
@@ -753,7 +753,7 @@
                   </tr>
                   <tr>
                     <td class="col1">支持语言</td>
-                    <td class="col2">Html.WAP.ASP.NET.PHP.PERL5.独立 CGI-bin</td>
+                    <td class="col2">Html、WAP、ASP、.NET、PHP、PERL5、独立 CGI-bin</td>
                   </tr>
                   <tr>
                     <td class="col1">机房</td>
@@ -837,7 +837,7 @@
                   </tr>
                   <tr>
                     <td class="col1">支持语言</td>
-                    <td class="col2">Html.WAP.ASP.NET.PHP.PERL5.独立 CGI-bin</td>
+                    <td class="col2">Html、WAP、PHP、PERL5、独立 CGI-bin</td>
                   </tr>
                   <tr>
                     <td class="col1">机房</td>
@@ -1005,7 +1005,7 @@
                   </tr>
                   <tr>
                     <td class="col1">支持语言</td>
-                    <td class="col2">Html.WAP.PHP.PERL5.独立 CGI-bin</td>
+                    <td class="col2">Html、WAP、PHP、PERL5、独立 CGI-bin</td>
                   </tr>
                   <tr>
                     <td class="col1">机房</td>
@@ -1173,7 +1173,7 @@
                   </tr>
                   <tr>
                     <td class="col1">支持语言</td>
-                    <td class="col2">Html、WAP、ASP、.NET、PHP、PERL5、独立 CGI-bin</td>
+                    <td class="col2">Html、WAP、PHP、PERL5、独立 CGI-bin</td>
                   </tr>
                   <tr>
                     <td class="col1">机房</td>
