--- a/index.html
+++ b/index.html
@@ -1209,10 +1209,10 @@
       </ul>
       <h2>活动规则</h2>
       <div class="rule">
-        <p><img src="./img/img_03.png" alt=""> 活动时间：2020年4月1日-2020年6月30日</p>
+        <p><img src="./img/img_03.png" alt=""> 活动时间：2020年7月1日-2020年9月30日</p>
         <p><img src="./img/img_04.png" alt=""> 所有活动不限新老代理商，均可参加；</p>
-        <p><img src="./img/img_05.png" alt=""> 新机型虚机仅上线三个月，再次上线时间待定；</p>
-        <p><img src="./img/img_06.png" alt=""> 本活动最终解释权归新网。</p>
+        <p><img src="./img/img_05.png" alt=""> 本活动最终解释权归新网。</p>
+        <!-- <p><img src="./img/img_06.png" alt=""> 本活动最终解释权归新网。</p> -->
       </div>
     </div>
   </div>
